crates/bijux-pipelines/tests/profiles/snapshots/profiles__profiles__bam_adna_shotgun_profile.snap
---
source: crates/bijux-pipelines/tests/profiles/profiles.rs
expression: bam_adna_shotgun_profile()
---
{
  "id": "bam-to-bam__adna_shotgun__v1",
  "description": "Ancient DNA shotgun defaults",
  "stability": "Beta",
  "input_domains": [
    "Bam"
  ],
  "output_domains": [
    "Bam"
  ],
  "defaults": {
    "tools": {},
    "params": {
      "bam.authenticity": {
        "mode": "aggregate"
      },
      "bam.bias_mitigation": {
        "gc_bias_correction": true,
        "map_bias_correction": false
      },
      "bam.complexity": {
        "min_reads": 100000,
        "projection_points": [
          1000000,
          2000000
        ]
      },
      "bam.contamination": {
        "assumptions": null,
        "prior": null,
        "reference_panels": [],
        "scope": "both",
        "sex_specific": false
      },
      "bam.coverage": {
        "depth_thresholds": [
          1,
          3,
          5
        ],
        "regions": null
      },
      "bam.damage": {
        "pmd_threshold_3p": 0.3,
        "pmd_threshold_5p": 0.3,
        "trim_3p": 2,
        "trim_5p": 2,
        "udg_model": "non_udg"
      },
      "bam.filter": {
        "base_quality_threshold": 20,
        "exclude_flags": [],
        "include_flags": [],
        "mapq_threshold": 30,
        "min_length": 30,
        "remove_duplicates": false
      },
      "bam.markdup": {
        "duplicate_action": "mark",
        "optical_duplicates": "mark_only",
        "umi_policy": "ignore"
      },
      "bam.qc_pre": {
        "regions": null
      },
      "bam.sex": {
        "expected_sex": null,
        "method": "rxy"
      },
      "bam.validate": {
        "strict": true
      }
    },
    "rationales": {
      "bam.authenticity": "pipeline default",
      "bam.bias_mitigation": "pipeline default",
      "bam.complexity": "pipeline default",
      "bam.contamination": "pipeline default",
      "bam.coverage": "pipeline default",
      "bam.damage": "pipeline default",
      "bam.filter": "pipeline default",
      "bam.markdup": "pipeline default",
      "bam.qc_pre": "pipeline default",
      "bam.sex": "pipeline default",
      "bam.validate": "pipeline default"
    }
  },
  "defaults_ledger_ref": "defaults_ledger.json",
  "invariants_preset": "adna",
  "capabilities": {
    "input_domains": [
      "Bam"
    ],
    "output_domains": [
      "Bam"
    ],
    "input_artifacts": [
      "Bam"
    ],
    "output_artifacts": [
      "Bam",
      "MetricsBundle"
    ],
    "required_inputs": [
      "bam"
    ],
    "produces_outputs": [
      "bam",
      "bam.metrics"
    ],
    "report_sections": [
      "bam"
    ],
    "required_report_sections": [
      "Bam",
      "PipelineDefaults"
    ],
    "required_metrics_bundles": [
      "BamAdna"
    ],
    "required_stages": [
      "bam.validate",
      "bam.qc_pre",
      "bam.filter",
      "bam.markdup",
      "bam.complexity",
      "bam.coverage",
      "bam.damage",
      "bam.authenticity",
      "bam.contamination",
      "bam.sex",
      "bam.bias_mitigation"
    ],
    "required_metrics": [
      "bam.metrics"
    ],
    "required_artifacts": [
      "report.json",
      "run_manifest.json",
      "stage_summaries.json"
    ],
    "supports_benchmarks": true
  }
}
